--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -7,7 +7,7 @@ $base-line-height: 1.7;
 
 
 // Colors
-$primary-color: #fc0247;
+$primary-color: #c24410;
 $secondery-color: #fa004a;
 $text-color: #8d939f;
 $dark: #030409;
