--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -7,8 +7,8 @@ $base-line-height: 1.7;
 
 
 // Colors
-$primary-color: #c24410;
-$secondery-color: #fa004a;
+$primary-color: #fa004a;
+$secondery-color: #fe3e0b;
 $text-color: #8d939f;
 $dark: #030409;
 
